--- a/midterm/contact.css
+++ b/midterm/contact.css
@@ -1,12 +1,28 @@
 /* For Mobile */
 @media only screen and (min-width:320px) {
+    body {
+        margin: 0;
+    }
+
     #header {
         background-color: #3c3b3a;
     }
 
-    a:link {
-        text-decoration: none;
+
+    .topnav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav li a {
         color: #f2f2f2;
+        text-decoration: none;
+    }
+
+    .topnav li {
+        float: none;
+        list-style: none;
     }
 
     /* Removing underline from ul */
@@ -18,10 +34,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-    }
-
-    nav ul a {
-        color: #f2f2f2;
     }
 
     .logo-image {
@@ -43,24 +55,36 @@
         font-size: 60px;
         font-family: 'Raleway', sans-serif;
         color: #3c3b3a;
-        padding: 10px 28px
+        padding: 10px 28px;
     }
 
     h2 {
         color: #f2f2f2;
         font-size: 40px;
-        text-align: center;
+        padding: 10px 22px;
+        margin: 0;
     }
 
     h3 {
         color: #3c3b3a;
         font-size: 40px;
-        padding: 10px 28px
+        text-align: center;
+        margin: 0;
+    }
+
+    h4 {
+        margin: 0;
     }
 
     p {
         font-size: 20px;
-        padding: 10px 28px
+        padding: 10px 28px;
+        margin: 0;
+
+    }
+
+    .name {
+        padding: 10px 22px;
     }
 
     input[type=text] {
@@ -85,7 +109,7 @@
     }
 
     #Message {
-        width: 90%;
+        width: 100%;
         height: 100px;
         padding: 12px 20px;
         margin: 10px 21;
@@ -101,11 +125,14 @@
         font-family: 'Raleway', sans-serif;
         background-color: #3c3b3a;
         color: #f2f2f2;
-        border-radius: 20px;
+        border-radius: 18px;
         border: none;
         box-shadow: 10px 8px 10px #3c3b3a;
         font-size: 30px;
-        width: 80%;
+        width: 90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .apply-form {
@@ -114,17 +141,65 @@
         box-shadow: 10px 8px 10px grey;
         border-radius: 18px;
         width: 290px;
-        height: 450px;
+        height: 485px;
         margin-left: auto;
         margin-right: auto;
     }
 
+    .map {
+        margin: 0;
+        width: 100%;
+    }
+
     #footer-container {
         background-color: #3c3b3a;
+        margin: 0;
     }
 
     .footer {
         color: #f2f2f2;
         text-align: center;
+        margin: 0;
+    }
+}
+
+/* * For Tablet Mockup */
+@media only screen and (min-width:768px) {
+    #header {
+        display: flex;
+    }
+
+    .logo-image {
+        width: 10%;
+        margin: 12px;
+    }
+
+    nav li {
+        list-style: none;
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Raleway', sans-serif;
+        display: inline;
+    }
+
+    nav li a {
+        padding: 14px 16px;
+    }
+
+    .topnav {
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+    }
+
+    .apply-form {
+        width: 350px;
+    }
+
+    .button {
+        width: 40%;
+        padding: 2px 8px;
+        margin-left: auto;
+        margin-right: 20px;
     }
 }
