working on about page

--- a/midterm/about.css
+++ b/midterm/about.css
@@ -134,7 +134,14 @@
     }
 
     .sponsors {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .spons {
         width: 30%;
+        margin: 0;
     }
 
     #footer-container {
