--- a/midterm/contact.css
+++ b/midterm/contact.css
@@ -174,22 +174,23 @@
         margin: 12px;
     }
 
-    nav li {
+    nav ul {
         list-style: none;
         font-size: 20px;
         text-align: center;
         font-family: 'Raleway', sans-serif;
-        display: inline;
-    }
-
-    nav li a {
-        padding: 14px 16px;
+        display: flex;
+        flex-direction: row;
     }
 
     .topnav {
         display: flex;
         flex-direction: row;
         margin-left: auto;
+    }
+
+    nav ul a {
+        padding: 14px 16px;
     }
 
     .apply-form {
@@ -201,5 +202,35 @@
         padding: 2px 8px;
         margin-left: auto;
         margin-right: 20px;
+    }
+}
+
+/* For Desktop Mockup */
+@media only screen and (min-width:958px) {
+    .body-form {
+        display: flex;
+    }
+    h3{
+        text-align:start;
+        padding: 10px 22px;
+    }
+    h4{
+        padding:10px 22px;
+    }
+
+    .apply-form {
+        width: 350px;
+        margin-right: 50px;
+        margin-top: 40px;
+    }
+
+    #loc {
+        display: flex;
+    }
+
+    .lm {
+        width: 50%;
+        margin-top: 30px;
+        padding: 10px 22px;
     }
 }
