--- a/midterm/contact.css
+++ b/midterm/contact.css
@@ -68,18 +68,21 @@
     h3 {
         color: #3c3b3a;
         font-size: 40px;
-        text-align: center;
+        padding: 10px 22px;
         margin: 0;
     }
 
     h4 {
         margin: 0;
+        font-family: 'Raleway', sans-serif;
+        padding: 10px 22px;
     }
 
     p {
         font-size: 20px;
         padding: 10px 28px;
         margin: 0;
+        font-family: 'Raleway', sans-serif;
 
     }
 
@@ -210,12 +213,14 @@
     .body-form {
         display: flex;
     }
-    h3{
-        text-align:start;
+
+    h3 {
+        text-align: start;
         padding: 10px 22px;
     }
-    h4{
-        padding:10px 22px;
+
+    h4 {
+        padding: 10px 22px;
     }
 
     .apply-form {
