--- a/midterm/about.css
+++ b/midterm/about.css
@@ -25,6 +25,16 @@
         list-style: none;
     }
 
+    .topnav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .topnav div:hover {
+        transform: scale(1.5);
+    }
+
     /* Removing underline from ul */
     nav ul {
         list-style: none;
@@ -204,6 +214,12 @@
     }
 
     .topnav {
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+    }
+
+    .topnav ul {
         display: flex;
         flex-direction: row;
         margin-left: auto;
