--- a/midterm/style.css
+++ b/midterm/style.css
@@ -24,10 +24,15 @@
         float: none;
     }
 
-    .topnav {
+    .topnav ul {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+
+    .topnav div:hover {
+        transform: scale(1.5);
     }
 
     .logo-image {
@@ -63,6 +68,10 @@
         margin: 0;
     }
 
+    h4 {
+        margin: 0;
+    }
+
     p {
         font-size: 30px;
         font-family: 'Raleway', sans-serif;
@@ -77,6 +86,10 @@
         text-align: center;
     }
 
+    .font:hover {
+        transform: scale(1.3);
+    }
+
     .icon-text {
         color: #26a682;
         font-size: 25px;
@@ -84,9 +97,15 @@
         margin: 0;
     }
 
+    .scro {
+        font-size: 0;
+    }
+
     #scroll {
         font-size: 0;
     }
+
+
 
     .start {
         background-color: #26a682;
@@ -194,6 +213,12 @@
         margin-left: auto;
     }
 
+    .topnav ul {
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+    }
+
     nav li a {
         padding: 14px 16px;
     }
@@ -204,10 +229,17 @@
         flex-direction: row;
     }
 
+    .scro {
+        color: #3c3b3a;
+        font-size: 15px;
+    }
+
     #scroll {
         font-size: 30px;
         color: #26a682;
         text-align: center;
+        display: flex;
+        flex-direction: column;
         margin: 0;
         padding: 0;
     }
@@ -322,7 +354,6 @@
 
     #bar {
         margin-top: 50px;
-        margin-left: 20px;
     }
 
     #w {
