--- a/midterm/style.css
+++ b/midterm/style.css
@@ -31,8 +31,9 @@
     }
 
 
-    .topnav div:hover {
-        transform: scale(1.5);
+    .topnav li:hover {
+        transform: scale(1.4);
+        text-decoration: underline;
     }
 
     .logo-image {
@@ -105,6 +106,10 @@
         font-size: 0;
     }
 
+    .arrow {
+        float: right;
+        width: 2%;
+    }
 
 
     .start {
@@ -357,6 +362,10 @@
     }
 
     #w {
+        width: 50%;
+    }
+
+    .w {
         width: 50%;
     }
 
