--- a/midterm/contact.css
+++ b/midterm/contact.css
@@ -123,7 +123,7 @@
         width: 100%;
         height: 100px;
         padding: 12px 20px;
-        margin: 10px 21;
+        margin: 10px;
         display: inline-block;
         border: 1px solid #ccc;
         border-radius: 10px;
@@ -177,8 +177,20 @@
     .arrow {
         float: right;
         width: 2%;
+        animation-name: arrow;
+        animation-duration: 1s;
+        animation-iteration-count: infinite;
     }
 
+    @keyframes arrow {
+        from {
+            transform: scale(1);
+        }
+
+        to {
+            transform: scale(0.2);
+        }
+    }
 }
 
 /* * For Tablet Mockup */
