--- a/midterm/style.css
+++ b/midterm/style.css
@@ -109,6 +109,19 @@
     .arrow {
         float: right;
         width: 2%;
+        animation-name: arrow;
+        animation-duration: 1s;
+        animation-iteration-count: infinite;
+    }
+
+    @keyframes arrow {
+        from {
+            transform: scale(1);
+        }
+
+        to {
+            transform: scale(0.2);
+        }
     }
 
 
