--- a/midterm/about.css
+++ b/midterm/about.css
@@ -30,7 +30,7 @@
         flex-direction: column;
         align-items: center;
     }
-
+    /* adding animation growth and underline to nav links */
     .topnav li:hover {
         transform: scale(1.4);
         text-decoration: underline;
@@ -131,7 +131,7 @@
         background-size: cover;
         background-position: center;
     }
-
+/* all image with width 0 don't show on mobile that's why they have now width */
     .bar {
         width: 0;
     }
