--- a/midterm/style.css
+++ b/midterm/style.css
@@ -30,7 +30,7 @@
         align-items: center;
     }
 
-
+    /* adding animation growth and underline to nav links */
     .topnav li:hover {
         transform: scale(1.4);
         text-decoration: underline;
