--- a/midterm/style.css
+++ b/midterm/style.css
@@ -109,7 +109,7 @@
 
     .arrow {
         float: right;
-        width: 2%;
+        width: 4%;
         animation-name: arrow;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -307,6 +307,10 @@
     .learn {
         width: 40%;
         margin-right: 20px;
+    }
+
+    .arrow {
+        width: 2%;
     }
 }
 
