--- a/midterm/about.css
+++ b/midterm/about.css
@@ -197,7 +197,7 @@
 
     .arrow {
         float: right;
-        width: 2%;
+        width: 4%;
         animation-name: arrow;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -212,7 +212,7 @@
         to {
             transform: scale(0.5);
         }
-        
+
     }
 }
 
@@ -303,6 +303,10 @@
 
     .spons {
         width: 20%;
+    }
+
+    .arrow {
+        width: 2%;
     }
 }
 
