--- a/midterm/contact.css
+++ b/midterm/contact.css
@@ -178,7 +178,7 @@
 
     .arrow {
         float: right;
-        width: 2%;
+        width: 4%;
         animation-name: arrow;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -236,6 +236,10 @@
         padding: 2px 8px;
         margin-left: auto;
         margin-right: 20px;
+    }
+
+    .arrow {
+        width: 2%;
     }
 }
 
