finishing layout for mobile

--- a/Finals/style.css
+++ b/Finals/style.css
@@ -1,5 +1,7 @@
 /* For Mobile */
 @media only screen and (min-width:320px) {
+
+    /* Homepage */
     .header {
         background-color: #88A7B9;
     }
@@ -39,10 +41,107 @@
         margin: 0;
     }
 
+    h1 {
+        color: white;
+        font-size: 40px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        text-align: center;
+        margin: 0;
+    }
+
     h2 {
-        font-size: 30px;
         color: red;
         font-family: 'Times New Roman', Times, serif;
         text-align: center;
+        margin: 0;
+    }
+
+    p {
+        padding: 12px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color: black;
+    }
+
+    .me {
+        width: 0;
+    }
+
+    /* Portfilio */
+    .portfilo {
+        max-width: 100%;
+        height: auto;
+    }
+
+    footer {
+        background-color: rgb(48, 45, 45);
+        margin: 0%;
+        padding: 0;
+    }
+
+    /* Service */
+    .container {
+        background-color: #647077;
+    }
+
+    .service {
+        max-width: 100%;
+        height: auto;
+    }
+
+    /* Contact */
+    .name {
+        padding: 12px 20px;
+    }
+
+    input[type=text] {
+        width: 90%;
+        padding: 12px 20px;
+        margin: 8px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-sizing: border-box;
+    }
+
+    input[type=email] {
+        width: 90%;
+        padding: 12px 20px;
+        margin: 8px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-sizing: border-box;
+
+    }
+
+    input[type=time] {
+        width: 90%;
+        padding: 12px 20px;
+        margin: 8px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-sizing: border-box;
+    }
+
+    #Details {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-sizing: border-box;
+    }
+
+    #hire-me {
+        background-color: #5c5d5e;
+        border: none;
+        box-shadow: 10px 8px 10px grey;
+        border-radius: 18px;
+        width: 290px;
+        height: 510px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
