--- a/Finals/style.css
+++ b/Finals/style.css
@@ -19,8 +19,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        max-width: 100%;
-        height: auto;
+        width: 25%;
     }
 
     /* Removing underline from ul */
@@ -65,6 +64,7 @@
         padding: 12px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         color: black;
+        margin: 0%;
     }
 
     .landingpage {
@@ -99,24 +99,7 @@
     }
 
     .profile-card {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        max-width: 500px;
-        margin: auto;
-        text-align: center;
         display: none;
-    }
-
-    .profile-button {
-        border: none;
-        outline: 0;
-        display: inline-block;
-        padding: 8px;
-        color: white;
-        background-color: #000;
-        text-align: center;
-        cursor: pointer;
-        width: 100%;
-        font-size: 18px;
     }
 
     /* Portfilio */
@@ -221,4 +204,68 @@
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+@media only screen and (min-width:768px) {
+
+    /* HOME PAGE */
+    .header {
+        display: flex;
+    }
+
+    .logo {
+        width: 9%;
+        margin: 12px;
+    }
+
+    nav li {
+        list-style: none;
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Raleway', sans-serif;
+        display: inline;
+    }
+
+    #nav {
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+    }
+
+    #nav ul {
+        display: flex;
+        flex-direction: row;
+        margin-left: auto;
+    }
+
+    nav li a {
+        padding: 14px 16px;
+    }
+
+    /* ABOUT PAGE */
+
+    .profile-card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        max-width: 500px;
+        margin: auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .profile-button {
+        border: none;
+        outline: 0;
+        display: inline-block;
+        padding: 8px;
+        color: white;
+        background-color: #000;
+        text-align: center;
+        cursor: pointer;
+        width: 500px;
+        font-size: 18px;
+    }
+
 }
