--- a/Finals/style.css
+++ b/Finals/style.css
@@ -55,7 +55,7 @@
 
     h2 {
         color: red;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: 'Yatra One', cursive;
         text-align: center;
         margin: 0;
     }
@@ -77,7 +77,7 @@
     }
 
     .me {
-        width: 0;
+        max-width: 0;
     }
 
     /* About */
@@ -98,11 +98,29 @@
         transform: translate(-50%, -50%);
     }
 
+    .about-wrap {
+        background-image: url(./images/images.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        max-width: 100%;
+        height: inherit;
+    }
+
     .profile-card {
         display: none;
     }
 
     /* Portfilio */
+    .portfolio-wrap {
+        background-image: url(./images/images.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        max-width: 100%;
+        height: auto;
+    }
+
     .portfilo {
         max-width: 100%;
         height: auto;
@@ -139,9 +157,11 @@
     .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         width: 60%;
-        height: 400px;
-        margin: 20px;
-        border-radius: 5px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        border-radius: 10px;
     }
 
     .card-container {
@@ -241,11 +261,27 @@
     nav li a {
         padding: 14px 16px;
     }
+    .landingpage{
+        height:auto;
+    }
+
+    .me {
+        max-width: 100%;
+        height: auto;
+    }
 
     /* ABOUT PAGE */
+    .about-wrap {
+        height: auto;
+    }
+
+    .profile-image {
+        max-width: 100%;
+        height: auto;
+    }
 
     .profile-card {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.2);
         max-width: 500px;
         margin: auto;
         text-align: center;
@@ -253,6 +289,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        border-radius: 10px;
     }
 
     .profile-button {
@@ -266,6 +303,12 @@
         cursor: pointer;
         width: 500px;
         font-size: 18px;
+    }
+
+    /* Service Page */
+    .card {
+        width: 60%;
+        height: auto;
     }
 
 }
