--- a/Finals/style.css
+++ b/Finals/style.css
@@ -72,12 +72,12 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        max-width: 100%;
+        width: 100%;
         height: inherit;
     }
 
     .me {
-        max-width: 0;
+        width: 0;
     }
 
     /* About */
@@ -87,7 +87,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
-        max-width: 100%;
+        width: 100%;
         height: 100px;
     }
 
@@ -103,7 +103,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        max-width: 100%;
+        width: 100%;
         height: inherit;
     }
 
@@ -117,12 +117,12 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 
     .portfilo {
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 
@@ -164,7 +164,7 @@
         border-radius: 10px;
     }
 
-    .card-container {
+    .card-text {
         padding: 2px 16px;
     }
 
@@ -261,12 +261,13 @@
     nav li a {
         padding: 14px 16px;
     }
-    .landingpage{
-        height:auto;
+
+    .landingpage {
+        height: auto;
     }
 
     .me {
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 
@@ -276,12 +277,12 @@
     }
 
     .profile-image {
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 
     .profile-card {
-        box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         max-width: 500px;
         margin: auto;
         text-align: center;
@@ -289,7 +290,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border-radius: 10px;
+
     }
 
     .profile-button {
@@ -305,10 +306,22 @@
         font-size: 18px;
     }
 
+    #socials {
+        text-decoration: none;
+        font-size: 22px;
+        color: black;
+    }
+
     /* Service Page */
     .card {
-        width: 60%;
+        width: 90%;
+        margin: 20px;
         height: auto;
+    }
+
+    .card-card {
+        display: flex;
+        flex-direction: row;
     }
 
 }
