--- a/Finals/style.css
+++ b/Finals/style.css
@@ -55,8 +55,9 @@
 
     h2 {
         color: red;
-        font-family: 'Yatra One', cursive;
+        font-family: monospace;
         text-align: center;
+        font-size: 40px;
         margin: 0;
     }
 
@@ -68,7 +69,7 @@
     }
 
     .landingpage {
-        background-image: url(./images/images.jpg);
+        background-image: url(./images/bn1.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -76,26 +77,76 @@
         height: inherit;
     }
 
+    #landingpage-button {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+    }
+
+    .hire {
+        background-color: black;
+        /* black */
+        border: none;
+        color: white;
+        margin: 20px;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 8px;
+        font-size: 16px;
+        transition-duration: 0.4s;
+    }
+
+    .hire:hover {
+        background-color: #f44336;
+        color: white;
+    }
+
+    .hire:active {
+        box-shadow: 20px #666;
+        transform: translateY(4px);
+    }
+
+    .work {
+        background-color: white;
+        color: black;
+        border: 2px solid #e7e7e7;
+        margin: 20px;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 10px;
+        font-size: 16px;
+        transition-duration: 0.4s;
+    }
+
+    .work:hover {
+        background-color: #555555;
+        color: white;
+    }
+
+
     .me {
         width: 0;
     }
 
     /* About */
     .banner {
-        background-image: url(./images/images\ \(1\).jpg);
-        background-position: center;
+        background-image:
+            /* bottom, image */
+            url(./images/bn2.jpg);
         background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-        width: 100%;
         height: 100px;
+        width: 100%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        background-size: cover;
+        background-position: center;
     }
 
     .banner-text {
-        position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
     }
 
     .about-wrap {
@@ -143,7 +194,7 @@
     /* Service */
 
     .service {
-        max-width: 100%;
+        width: 100%;
         height: auto;
     }
 
@@ -283,7 +334,7 @@
 
     .profile-card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        max-width: 500px;
+        max-width: 400px;
         margin: auto;
         text-align: center;
         display: flex;
@@ -302,7 +353,7 @@
         background-color: #000;
         text-align: center;
         cursor: pointer;
-        width: 500px;
+        width: 400px;
         font-size: 18px;
     }
 
@@ -314,9 +365,11 @@
 
     /* Service Page */
     .card {
-        width: 90%;
+        width: 60%;
         margin: 20px;
         height: auto;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     .card-card {
@@ -324,4 +377,41 @@
         flex-direction: row;
     }
 
+    .service {
+        width: 50%;
+    }
+
+}
+
+@media only screen and (min-width:958px) {
+
+    /* HOME PAGE */
+    .landingpage {
+        display: flex;
+    }
+
+    /* ABOUT PAGE */
+    .about-wrap {
+        display: flex;
+    }
+
+    /* Portfoli Page */
+    .portfolio-container {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+    }
+
+    /* SERVICE PAGE */
+    .card-card {
+        flex-direction: column;
+    }
+
+    .card-wrap {
+        display: grid;
+        grid-template-columns: 2fr 2fr 2fr;
+    }
+
+    .service {
+        width: 100%;
+    }
 }
