--- a/Finals/style.css
+++ b/Finals/style.css
@@ -91,7 +91,7 @@
         padding: 15px 32px;
         text-align: center;
         text-decoration: none;
-        border-radius: 8px;
+        border-radius: 18px;
         font-size: 16px;
         transition-duration: 0.4s;
     }
@@ -114,7 +114,7 @@
         padding: 15px 32px;
         text-align: center;
         text-decoration: none;
-        border-radius: 10px;
+        border-radius: 14px;
         font-size: 16px;
         transition-duration: 0.4s;
     }
@@ -399,6 +399,10 @@
     .portfolio-container {
         display: grid;
         grid-template-columns: 2fr 2fr;
+    }
+
+    .portfolio-card {
+        margin: 20px;
     }
 
     /* SERVICE PAGE */
