adding bootstrap navbar to my code

--- a/Finals/style.css
+++ b/Finals/style.css
@@ -3,7 +3,7 @@
 
     /* Homepage */
     .header {
-        background-color: #c2d9f7;
+        /* background-color: #c2d9f7; use instead a color from bootstrap */
     }
 
     body {
@@ -16,10 +16,10 @@
     }
 
     .logo {
-        display: block;
+        /* display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 25%;
+        width: 25%;             defined by bootstrap*/
     }
 
     /* Removing underline from ul */
@@ -271,7 +271,7 @@
         box-shadow: 10px 8px 10px grey;
         border-radius: 18px;
         width: 290px;
-        height: 510px;
+        height: 550px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -281,12 +281,12 @@
 
     /* HOME PAGE */
     .header {
-        display: flex;
+        /* display: flex;  defined by Bootstrap */
     }
 
     .logo {
-        width: 9%;
-        margin: 12px;
+        /* width: 9%;
+        margin: 12px;   defined by Bootstrap */
     }
 
     nav li {
