--- a/Finals/style.css
+++ b/Finals/style.css
@@ -2,7 +2,7 @@
 @media only screen and (min-width:320px) {
 
     /* Homepage */
-    .header {
+    header {
         /* background-color: #c2d9f7; use instead a color from bootstrap */
     }
 
@@ -15,7 +15,7 @@
         height: 80vh;
     }
 
-    .logo {
+    logo {
         /* display: block;
         margin-left: auto;
         margin-right: auto;
@@ -46,7 +46,7 @@
     }
 
     h1 {
-        color: white;
+        color: #000000;
         font-size: 40px;
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
@@ -55,9 +55,10 @@
 
     h2 {
         color: red;
-        font-family: monospace;
+        font-family: Arial, Helvetica, sans-serif;
         text-align: center;
         font-size: 40px;
+        font-weight: bold;
         margin: 0;
     }
 
@@ -185,9 +186,26 @@
         font-family: arial;
     }
 
+    /* CONTACT */
+    .Hire-button {
+        font-family: 'Raleway', sans-serif;
+        background-color: #030303;
+        color: #f2f2f2;
+        border-radius: 18px;
+        border: none;
+        box-shadow: 10px 8px 10px #3c3b3a;
+        font-size: 26px;
+        width: 70%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     footer {
         background-color: rgb(48, 45, 45);
-        margin: 0%;
+        color: white;
+        text-align: center;
+        margin: 0;
         padding: 0;
     }
 
@@ -195,14 +213,14 @@
         color: white;
         text-align: center;
         font-size: 30px;
+        margin: 0;
+        padding: 0;
     }
 
-    #footer-p {
-        color: white;
-        text-align: center;
-        font-size: 20px;
-        font-family: 'Times New Roman', Times, serif;
+    .foot {
+        margin: 20px;
     }
+
 
     /* Service */
 
@@ -229,7 +247,7 @@
     }
 
     .card {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2);
         width: 60%;
         height: auto;
         margin-left: auto;
@@ -303,14 +321,12 @@
 @media only screen and (min-width:768px) {
 
     /* HOME PAGE */
-    .header {
-        /* display: flex;  defined by Bootstrap */
-    }
+    /* header  */
+    /* display: flex;  defined by Bootstrap */
 
-    .logo {
-        /* width: 9%;
+    /* logo  */
+    /* width: 9%;
         margin: 12px;   defined by Bootstrap */
-    }
 
     nav li {
         list-style: none;
@@ -409,31 +425,44 @@
         margin: 10px;
     }
 
-    #footericon {
-        text-align: end;
-    }
 
-    #footer-p {
-        text-align: start;
-    }
-}
+    @media only screen and (min-width:958px) {
 
-@media only screen and (min-width:958px) {
+        /* HOME PAGE */
+        #container {
+            display: flex;
+        }
 
-    /* HOME PAGE */
-    .landingpage {
-        display: flex;
-    }
+        .container-text {
+            width: 50%;
+        }
 
-    /* ABOUT PAGE */
-    .about-wrap {
-        display: flex;
+        .container-image {
+            width: 50%;
+            margin-top: 20px;
+        }
+
+        /* ABOUT PAGE */
+        .about-wrap {
+            display: flex;
+            margin-top: 20px;
+        }
+
+        #footericon {
+            text-align: end;
+        }
+
+        footer {
+
+            text-align: start;
+        }
     }
 
     /* Portfoli Page */
     .portfolio-container {
         display: grid;
         grid-template-columns: 2fr 2fr;
+        margin: 20px;
     }
 
     .portfolio-card {
@@ -452,5 +481,18 @@
 
     .service {
         width: 100%;
+    }
+
+    #contact {
+        display: flex;
+        margin: 20px;
+    }
+
+    #hire-me {
+        height: 590px;
+    }
+
+    .con {
+        width: 50%;
     }
 }
