--- a/Finals/style.css
+++ b/Finals/style.css
@@ -54,8 +54,8 @@
     }
 
     h2 {
-        color: red;
-        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(255, 0, 0);
+        font-family: 'Times New Roman', Times, serif;
         text-align: center;
         font-size: 40px;
         font-weight: bold;
@@ -202,7 +202,7 @@
     }
 
     footer {
-        background-color: rgb(48, 45, 45);
+        background-color: black;
         color: white;
         text-align: center;
         margin: 0;
@@ -402,6 +402,13 @@
         color: black;
     }
 
+    /* Portfolio Page */
+    .portfolio-container {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        margin: 20px;
+    }
+
     /* Service Page */
     .card {
         width: 60%;
@@ -421,11 +428,12 @@
     }
 
     .service-button {
-        width: 70%;
+        width: 90%;
         margin: 10px;
     }
+
     /* Contact Page */
-    #hire-me{
+    #hire-me {
         height: 600px;
     }
 }
@@ -463,7 +471,7 @@
     /* Portfoli Page */
     .portfolio-container {
         display: grid;
-        grid-template-columns: 2fr 2fr;
+        grid-template-columns: 2fr 2fr 2fr 2fr;
         margin: 20px;
     }
 
